<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="himesp7.cis2237.com.grocerybag.ViewGroceriesActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/horizontalScrollView" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="5"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_bread"
                android:id="@+id/txtBreadTitle"
                android:layout_row="0"
                android:layout_column="0"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fruit"
                android:id="@+id/txtFruitTitle"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_vegetable"
                android:id="@+id/txtVegetableTitle"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_meat"
                android:id="@+id/txtMeatTitle"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_cheese"
                android:id="@+id/txtCheeseTitle"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtBread"
                android:layout_row="1"
                android:layout_column="0"
                style="@style/GroceryBagTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtFruit"
                android:layout_column="1"
                android:layout_row="1"
                style="@style/GroceryBagTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtVegetable"
                android:layout_column="2"
                android:layout_row="1"
                style="@style/GroceryBagTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtMeat"
                style="@style/GroceryBagTextView"
                android:layout_column="3"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtCheese"
                android:layout_column="4"
                android:layout_row="1"
                style="@style/GroceryBagTextView" />

        </GridLayout>
    </HorizontalScrollView>

</RelativeLayout>
